<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>mcv1_20</artifactId>

    <parent>
        <groupId>dev.geco.gholo</groupId>
        <artifactId>GHolo</artifactId>
        <version>1.0.0</version>
    </parent>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <spigot.version>1.20.1-R0.1-SNAPSHOT</spigot.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot</artifactId>
            <version>${spigot.version}</version>
            <classifier>remapped-mojang</classifier>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.geco.gholo</groupId>
            <artifactId>mcv1_19_4</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
    </dependencies>

</project>